--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -37,5 +37,7 @@
 			</plugin>
 		</plugins>
 	</build>
-
+   <docker.image.prefix>aksregistryuseast.azurecr.io</docker.image.prefix>
+   <jib-maven-plugin.version>2.5.2</jib-maven-plugin.version>
+   <java.version>1.8</java.version>
 </project>
