--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,17 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+			  	<artifactId>jib-maven-plugin</artifactId>
+  				<groupId>com.google.cloud.tools</groupId>
+  				<version>${jib-maven-plugin.version}</version>
+  				<configuration>
+     				<from>
+         				<image>mcr.microsoft.com/java/jdk:8-zulu-alpine</image>
+     				</from>
+     				<to>
+         				<image>${docker.image.prefix}/${project.artifactId}</image>
+     				</to>
+  				</configuration>
 			</plugin>
 		</plugins>
 	</build>
