--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
          				<image>mcr.microsoft.com/java/jdk:8-zulu-alpine</image>
      				</from>
      				<to>
-         				<image>${docker.image.prefix}/${project.artifactId}</image>
+         				<image>${docker.image.prefix}/${project.artifactId}:${BUILD_NUMBER}</image>
      				</to>
   				</configuration>
 			</plugin>
