--- a/springboot.yaml
+++ b/springboot.yaml
@@ -1,7 +1,14 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: springboot
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: springboot-service
+  namespace: springboot
   labels:
     app: spring-boot
 spec:
@@ -17,8 +24,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: springboot-deployment
+  namespace: springboot
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: spring-boot
@@ -28,11 +36,11 @@ spec:
         app: spring-boot
     spec:
       containers:
-      - image: aksregistryuseast.azurecr.io/spring-boot-docker:latest
+      - image: aksregistryuseast.azurecr.io/spring-boot-docker:20
         imagePullPolicy: Always
         name: spring-boot
         ports:
         - containerPort: 8080
           name: spring-boot
-      # imagePullSecrets:
-      # - name: aksregistrysecret
+      imagePullSecrets:
+      - name: aksregistrysecret
